new file:   main.css 	modified:   main.html

--- a/main.html
+++ b/main.html
@@ -1,1 +1,72 @@
-!
+<html>
+	<head>
+		<link href="style.css" rel="stylesheet">
+		<title>Your Name resume</title>
+        <style type="text/css" href="main.css" rel="stylesheet"></style>
+	</head>
+
+	<body>
+		<header id="header">
+			<!-- resume header with your name and title -->
+			<h1> GANTAVYA BANSAL</h1>
+			<hr>
+            💼 Sophomore Engineering Undergrad at GLAU | 🔍 CS50 Enthusiast            <hr>
+		</header>
+		<main>
+			<article id="mainLeft">
+				<section>
+					<h2>CONTACT</h2>
+                    <p>
+                        <i class="fa fa-envelope" aria-hidden="true"></i>
+                        <a href="mailto:gantavyaoo@gmail.com">Gantavyaoo@gmail.com</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-github" aria-hidden="true"></i>
+                        <a href="https://github.com/stubanx">stubanx</a>
+                    </p>
+                    <p>
+                        <i class="fab fa-linkedin" aria-hidden="true"></i>
+                        <a href="linkedin.com/in/gantavya-bansal">Gantavya Bansal</a>
+                    </p>
+                				</section>
+				<section>
+					<h2>SKILLS</h2>
+					<!-- your skills -->
+                    <p>HTML, CSS, GitHub, VS Code...</p>
+				</section>
+				<section>
+					<h2>EDUCATION</h2>
+					<!-- your education -->
+                    <h3>B.Tech cse</h3>
+                    <p>
+GLA University                    </p>
+                    <p>
+                        2023-2027
+                    </p>
+				</section>            
+			</article>
+			<article id="mainRight">
+				<section>
+					<h2>ABOUT</h2>
+                    <p>💼 Assisted in Hiring for 200+ Seniors |🥉 Ranked 3rd in Hack-D-Py | 🌟 Top 10 Innovative Minds in Hackaccuino
+<br>
+                        👋 Hey! I'm Gantavya Bansal, a sophomore studying Computer Science and Engineering at GLA University. 💡 I'm all about problem-solving, content creation, and sales. Currently, I'm working with The Department of Alumni Affairs (Team Editorial) as an active mamber. On the hunt for awesome opportunities to learn and grow! This gig not only gives me the inside scoop on the corporate scene but also hooks me up with top-notch connections and mentorship..</p>				</section>
+				<section>
+					<h2>WORK EXPERIENCE</h2>
+					<h3>JOB TITLE</h3>
+<p>
+		Company Name | 2008 - 2010
+</p>
+<p>
+		Describe what you did in this position with one summary sentence and no more than 3 bullet points with specific highlights
+</p>
+<ul>
+		<li>Cool accomplishment</li>
+		<li>Cool accomplishment</li>
+		<li>Cool accomplishment</li>
+</ul>
+				</section>
+			</article>
+		</main>
+	</body>
+</html>
