modified:   main.html 	renamed:    main.css -> style.css

--- a/main.html
+++ b/main.html
@@ -2,13 +2,12 @@
 	<head>
 		<link href="style.css" rel="stylesheet">
 		<title>Your Name resume</title>
-        <style type="text/css" href="main.css" rel="stylesheet"></style>
-	</head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">	</head>
 
 	<body>
 		<header id="header">
 			<!-- resume header with your name and title -->
-			<h1> GANTAVYA BANSAL</h1>
+			<h1> <b>GANTAVYA</b> BANSAL</h1>
 			<hr>
             💼 Sophomore Engineering Undergrad at GLAU | 🔍 CS50 Enthusiast            <hr>
 		</header>
